--- a/app/src/main/res/layout/captain_log_in_activity_2.xml
+++ b/app/src/main/res/layout/captain_log_in_activity_2.xml
@@ -13,50 +13,8 @@
         android:layout_weight="2"
         android:gravity="center"
         android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1.5"
-        android:padding="10dp"
-        android:gravity="center"
 
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:fontFamily="casual"
-            android:gravity="center"
-            android:text="Log In "
-            android:textColor="@color/yellow"
-            android:textSize="30sp"
-            android:textStyle="bold" />
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:fontFamily="casual"
-            android:gravity="center"
-            android:text=" To Your Account"
-            android:textColor="@color/alpha_yellow"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <pl.droidsonroids.gif.GifImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_margin="0dp"
-            android:src="@drawable/hj"
-            app:civ_border_width="3dp" />
-
-
-    </LinearLayout>
-
-<!--        <androidx.cardview.widget.CardView-->
+        <!--        <androidx.cardview.widget.CardView-->
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="wrap_content"-->
 <!--            android:layout_margin="15dp"-->
@@ -65,6 +23,49 @@
 <!--            app:cardBackgroundColor="@color/no_color"-->
 <!--            app:cardCornerRadius="30dp"-->
 <!--            app:cardElevation="30dp">-->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1.5"
+            android:gravity="center"
+            android:orientation="vertical"
+
+            android:padding="10dp">
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:text="Log In "
+                android:textColor="@color/yellow"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:text=" To Your Account"
+                android:textColor="@color/alpha_yellow"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <pl.droidsonroids.gif.GifImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="0dp"
+                android:layout_weight="1"
+                android:src="@drawable/hj"
+                app:civ_border_width="3dp" />
+
+
+        </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
