--- a/app/src/main/res/layout/parking_order_raw.xml
+++ b/app/src/main/res/layout/parking_order_raw.xml
@@ -33,9 +33,26 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/alpha_background2"
-                    android:orientation="vertical">
+                    android:orientation="horizontal">
 
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="3"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/profile_image_"
+                            android:layout_width="match_parent"
+                            android:layout_height="70dp"
+                            android:layout_weight="0"
+
+                            android:src="@drawable/car4"
+                            app:civ_border_color="@color/yellow"
+                            app:civ_border_width="4dp" />
+                    </LinearLayout>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -55,7 +72,7 @@
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
                                 android:text="Client Name"
-                                android:textColor="@color/white" />
+                                android:textColor="@color/yellow" />
 
                             <TextView
                                 android:id="@+id/clientName"
@@ -64,7 +81,7 @@
                                 android:gravity="center"
                                 android:padding="0dp"
                                 android:text="35.165546/ 35.1545"
-                                android:textColor="@color/white" />
+                                android:textColor="@color/yellow" />
 
                         </LinearLayout>
 
@@ -79,7 +96,7 @@
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
                                 android:text="phone No"
-                                android:textColor="@color/white" />
+                                android:textColor="@color/yellow" />
 
                             <TextView
                                 android:id="@+id/phoneNo"
@@ -88,31 +105,13 @@
                                 android:gravity="center"
                                 android:padding="0dp"
                                 android:text="35.165546/ 35.1545"
-                                android:textColor="@color/white" />
+                                android:textColor="@color/yellow" />
 
                         </LinearLayout>
 
 
                     </LinearLayout>
 
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="3"
-                        android:gravity="center"
-                        android:orientation="vertical">
-
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/profile_image_"
-                            android:layout_width="match_parent"
-                            android:layout_height="70dp"
-                            android:layout_weight="0"
-
-                            android:src="@drawable/car4"
-                            app:civ_border_color="@color/black"
-                            app:civ_border_width="0.2dp" />
-                    </LinearLayout>
 
                 </LinearLayout>
 
