--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -23,7 +23,13 @@
 
         <item name="android:windowMinWidthMajor">70%</item>
         <item name="android:windowMinWidthMinor">70%</item>
+    </style>
 
-
+    <style name="TextLabel" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
+        <item name="android:textColorHint">@color/alphaBlack</item>
+        <item name="android:textSize">16sp</item>
+        <item name="colorControlNormal">@color/black</item>
+        <item name="colorControlActivated">@color/yellow</item>
+        <item name="lineHeight">4dp</item>
     </style>
 </resources>
